--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.16",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^15.3.0",
     "nodemon": "^2.0.7",
+    "redis": "^3.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
@@ -27,7 +30,9 @@
     "@types/express": "^4.17.11",
     "apollo-server-express": "^2.24.1",
     "argon2": "^0.27.2",
+    "connect-redis": "^5.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.5.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
